[project]
name = "final-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "R. Kanauchi", email = "s258605s@st.go.tuat.ac.jp" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
final-report = "final_report:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
