[project]
name = "final-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "R. Kanauchi", email = "s258605s@st.go.tuat.ac.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.0",
    "torchvision>=0.24.1",
    "torch>=2.9.1"
]

[project.scripts]
final-report = "final_report:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
